@@ -1,2 +1,2 @@
-__version__ = '0.1'
+__version__ = '0.2'
 
