@@ -8,6 +8,50 @@ Subpackages
 
     ag.orbit.ops
 
+Submodules
+----------
+
+ag\.orbit\.command module
+-------------------------
+
+.. automodule:: ag.orbit.command
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+ag\.orbit\.config module
+------------------------
+
+.. automodule:: ag.orbit.config
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+ag\.orbit\.encryption module
+----------------------------
+
+.. automodule:: ag.orbit.encryption
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+ag\.orbit\.network module
+-------------------------
+
+.. automodule:: ag.orbit.network
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+ag\.orbit\.wallet module
+------------------------
+
+.. automodule:: ag.orbit.wallet
+    :members:
+    :undoc-members:
+    :show-inheritance:
+
+
 Module contents
 ---------------
 
