@@ -1,6 +1,8 @@
 Copyright (C) 2018 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_072818_1 - Add some wallet management functions.
+
 saw_072718_2 - Misc. installation and documentation fixes.
 
 saw_072718_1 - A functional token create operation.
